--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,7 @@ VUE_APP_TITLE = 软体工厂管理系统
 ENV = 'development'
 
 
-VUE_APP_BASE_API = '/'
+VUE_APP_BASE_API = ''
 
 VUE_APP_URL = 'http://192.168.0.25:8086'
 
